# crewai-copy-multi-agents

./: .gitignore  README.MD
copysms/: README.md  pyproject.toml
copysms/src/copysms/: main.py
copysms/src/copysms/config/: agents.yaml  tasks.yaml
copywhatsapp/: README.md  pyproject.toml
copywhatsapp/db/: chroma.sqlite3
copywhatsapp/src/copywhatsapp/: crew.py  main.py
copywhatsapp/src/copywhatsapp/config/: agents.yaml  tasks.yaml
copywhatsapp/src/copywhatsapp/docs/: exemplos.docx
