[project]
name = "copywhatsapp"
version = "0.1.0"
description = "copyWhatsApp using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.9,<1.0.0"
]

[project.scripts]
copywhatsapp = "copywhatsapp.main:run"
run_crew = "copywhatsapp.main:run"
train = "copywhatsapp.main:train"
replay = "copywhatsapp.main:replay"
test = "copywhatsapp.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
